# all-is-cubes

./: Cargo.toml  README.md  bacon.toml  crash.patch  diffs  minimize-lints.sh  minimize.sh  old.rs  patch.py  premesh.rs  universe.rs
.cargo/: config.toml
all-is-cubes/: Cargo.toml
all-is-cubes/src/: behavior.rs  block.rs  camera.rs  character.rs  chunked_mesh.rs  chunking.rs  content.rs  drawing.rs  fluff.rs  intalloc.rs  inv.rs  lib.rs  linking.rs  listen.rs  math.rs  mesh.rs  physics.rs  raycast.rs  raytracer.rs  save.rs  space.rs  time.rs  transaction.rs  universe.rs  util.rs
all-is-cubes/src/block/: attributes.rs  block_def.rs  builder.rs  evaluated.rs  modifier.rs  resolution.rs  tests.rs
all-is-cubes/src/block/modifier/: composite.rs  move.rs  quote.rs  zoom.rs
all-is-cubes/src/camera/: flaws.rs  graphics_options.rs  renderer.rs  stdcam.rs  tests.rs
all-is-cubes/src/character/: cursor.rs  spawn.rs  tests.rs
all-is-cubes/src/content/: draw_box.rs  load_image.rs  palette.rs  testing.rs
all-is-cubes/src/inv/: icons.rs  inventory.rs  tool.rs
all-is-cubes/src/listen/: cell.rs  listeners.rs  util.rs
all-is-cubes/src/math/: aab.rs  color.rs  coord.rs  face.rs  grid_aab.rs  matrix.rs  rotation.rs
all-is-cubes/src/mesh/: block_mesh.rs  block_vertex.rs  chunked_mesh.rs  planar.rs  space_mesh.rs  tests.rs  texalloc.rs
all-is-cubes/src/mesh/chunked_mesh/: chunk.rs
all-is-cubes/src/physics/: body.rs  collision.rs
all-is-cubes/src/raytracer/: pixel_buf.rs  renderer.rs  surface.rs  text.rs  updating.rs
all-is-cubes/src/save/: conversion.rs  schema.rs  tests.rs
all-is-cubes/src/space/: builder.rs  light.rs  space_txn.rs  tests.rs
all-is-cubes/src/space/light/: data.rs  debug.rs  tests.rs  updater.rs
all-is-cubes/src/transaction/: generic.rs  tester.rs
all-is-cubes/src/universe/: members.rs  tests.rs  universe_txn.rs  uref.rs  visit.rs
all-is-cubes/src/util/: yield_progress.rs
src/: lib.rs
